# fusion-backend

./: .env  Cargo.toml  backend.yaml  cliff.toml  deny.toml  test.rest
migrations/: 20250106132538_users.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/handlers/: mod.rs  user.rs
src/model/: user.rs
src/models/: mod.rs  user.rs
