[package]
name = "fuscion"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
sqlx-db-tester = "0.5.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
